hide not relevant code from code example

--- a/src/components/ResponsiveList/__stories__/ResponsiveList.stories.mdx
+++ b/src/components/ResponsiveList/__stories__/ResponsiveList.stories.mdx
@@ -1,4 +1,5 @@
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
+import { ResizableBox } from "react-resizable";
 import {
   Activity,
   Alert,
@@ -23,13 +24,7 @@ import "./ResponsiveList.stories.scss";
 
 <Meta title="Layout/ResponsiveList" component={ResponsiveList} />
 
-export const componentTemplate = responseListProps => {
-  const secondaryContent = (
-    <Menu>
-      <MenuItem icon={Alert} title="Watch out" />
-      <MenuItem icon={Activity} title="History" />
-    </Menu>
-  );
+export const ContainerForDemonstration = ({ children }) => {
   return (
     <div style={{ width: "100%" }}>
       <div style={{ width: "80%" }}>
@@ -46,57 +41,71 @@ export const componentTemplate = responseListProps => {
           minConstraints={[200, 48]}
           maxConstraints={[850, 48]}
         >
-          <ResponsiveList
-            id="Knobs"
-            className="responsive-story"
-            menuButtonSize={ResponsiveList.menuButtonSizes.MEDIUM}
-            {...responseListProps}
-          >
-            <SplitButton size={SplitButton.sizes.MAIN} marginRight secondaryDialogContent={secondaryContent}>
-              Add Item
-            </SplitButton>
-            <div
-              className="responsive-lst-search"
-              responsiveListPlaceholder={
-                <Search
-                  id="search-icon-inside"
-                  size={Search.sizes.MEDIUM}
-                  placeholder="search for content"
-                  iconName={SearchIcon}
-                  secondaryIconName={CloseSmall}
-                />
-              }
-            >
-              <Search
-                size={Search.sizes.MEDIUM}
-                placeholder="search for content"
-                iconName={SearchIcon}
-                secondaryIconName={CloseSmall}
-              />
-            </div>
-            <Button kind={Button.kinds.TERTIARY} marginLeft>
-              <Icon icon={Broom} ignoreFocusStyle className="responsive-icon-margin" />
-              Clean
-            </Button>
-            <Button kind={Button.kinds.TERTIARY} marginLeft>
-              <Icon icon={Group} ignoreFocusStyle />
-            </Button>
-            <Button kind={Button.kinds.TERTIARY} marginLeft>
-              <Icon icon={Moon} ignoreFocusStyle />
-            </Button>
-            <Button kind={Button.kinds.TERTIARY} marginLeft>
-              <Icon icon={API} ignoreFocusStyle />
-            </Button>
-            <Button kind={Button.kinds.TERTIARY} marginLeft>
-              <Icon icon={Sun} ignoreFocusStyle />
-            </Button>
-            <Button kind={Button.kinds.TERTIARY} marginLeft>
-              <Icon icon={Bolt} ignoreFocusStyle />
-            </Button>
-          </ResponsiveList>
+          {children}
         </ResizableBox>
       </div>
     </div>
+  );
+};
+
+export const componentTemplate = responseListProps => {
+  const secondaryContent = (
+    <Menu>
+      <MenuItem icon={Alert} title="Watch out" />
+      <MenuItem icon={Activity} title="History" />
+    </Menu>
+  );
+  return (
+    <ContainerForDemonstration>
+      <ResponsiveList
+        id="Knobs"
+        className="responsive-story"
+        menuButtonSize={ResponsiveList.menuButtonSizes.MEDIUM}
+        {...responseListProps}
+      >
+        <SplitButton size={SplitButton.sizes.MAIN} marginRight secondaryDialogContent={secondaryContent}>
+          Add Item
+        </SplitButton>
+        <div
+          className="responsive-lst-search"
+          responsiveListPlaceholder={
+            <Search
+              id="search-icon-inside"
+              size={Search.sizes.MEDIUM}
+              placeholder="search for content"
+              iconName={SearchIcon}
+              secondaryIconName={CloseSmall}
+            />
+          }
+        >
+          <Search
+            size={Search.sizes.MEDIUM}
+            placeholder="search for content"
+            iconName={SearchIcon}
+            secondaryIconName={CloseSmall}
+          />
+        </div>
+        <Button kind={Button.kinds.TERTIARY} marginLeft>
+          <Icon icon={Broom} ignoreFocusStyle className="responsive-icon-margin" />
+          Clean
+        </Button>
+        <Button kind={Button.kinds.TERTIARY} marginLeft>
+          <Icon icon={Group} ignoreFocusStyle />
+        </Button>
+        <Button kind={Button.kinds.TERTIARY} marginLeft>
+          <Icon icon={Moon} ignoreFocusStyle />
+        </Button>
+        <Button kind={Button.kinds.TERTIARY} marginLeft>
+          <Icon icon={API} ignoreFocusStyle />
+        </Button>
+        <Button kind={Button.kinds.TERTIARY} marginLeft>
+          <Icon icon={Sun} ignoreFocusStyle />
+        </Button>
+        <Button kind={Button.kinds.TERTIARY} marginLeft>
+          <Icon icon={Bolt} ignoreFocusStyle />
+        </Button>
+      </ResponsiveList>
+    </ContainerForDemonstration>
   );
 };
 
