--- a/src/components/TextField/__stories__/TextField.stories.mdx
+++ b/src/components/TextField/__stories__/TextField.stories.mdx
@@ -205,26 +205,15 @@ Users can insert text.
   </Story>
 </Canvas>
 
-### Input field with description icon
+### Input field with description
 
 <Canvas>
   <Story name="Input field with description">
     <div className="monday-storybook-text-field_size">
-      <TextField title="I need help" description="Enter Text" placeholder="Text" size={TextField.sizes.MEDIUM} />
-    </div>
-  </Story>
-</Canvas>
-
-### Input field with description + icon
-
-<Canvas>
-  <Story name="Input field with description + icon">
-    <div className="monday-storybook-text-field_size">
       <TextField
-        title="I need help"
-        descriptionIcon={Help}
-        description="Enter Text"
-        placeholder="Text"
+        title="Your name"
+        description="Please provide your full name"
+        placeholder="John Doe"
         size={TextField.sizes.MEDIUM}
       />
     </div>
