--- a/src/storybook/stand-alone-documentaion/typography/typography.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/typography/typography.stories.mdx
@@ -62,8 +62,8 @@ More ever this is how we are building our css variable for our main font familie
 />
 
 <Tip title="What font to use?">
-  We are using Roboto from Google Fonts as default for our design system. Click{" "}
-  <Link size={Link.sizes.SMALL} href="https://fonts.google.com/specimen/Roboto" withoutSpacing>
+  We are using Figtree from Google Fonts as default for our design system. Click{" "}
+  <Link size={Link.sizes.SMALL} href="https://fonts.google.com/specimen/Figtree" withoutSpacing>
     here
   </Link>{" "}
   to download.
