--- a/src/components/Combobox/__stories__/combobox.stories.mdx
+++ b/src/components/Combobox/__stories__/combobox.stories.mdx
@@ -56,7 +56,7 @@ Combo box allowing users to filter longer lists to only the selections matching 
         { id: "2", label: "Option 2" },
         { id: "3", label: "Option 3" }
       ],
-        onClick: () =>  alert("clicked"),
+      onClick: () => alert("clicked"),
       placeholder: "Placeholder text here",
       clearFilterOnSelection: true
     }}
@@ -400,6 +400,25 @@ better user experience.
             <div style={{ width: "300px" }}>
               <DialogContentContainer>
                 <Combobox
+                  options={options}
+                  renderOnlyVisibleOptions
+                  categories={categories}
+                  placeholder="Placeholder text here"
+                  maxOptionsWithoutScroll={3}
+                />
+              </DialogContentContainer>
+            </div>
+          </StoryDescription>
+          <StoryDescription
+            align={Flex.align.START}
+            description="Virtualization optimization with sticky categories"
+            vertical
+            headerStyle={{ width: "70%", textAlign: "start" }}
+          >
+            <div style={{ width: "300px" }}>
+              <DialogContentContainer>
+                <Combobox
+                  stickyCategories
                   options={options}
                   renderOnlyVisibleOptions
                   categories={categories}
