Remove MultiStepIndicator stories css overrides of MultiStepIndicator

--- a/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.mdx
+++ b/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.mdx
@@ -367,6 +367,7 @@ State transition automatic example
               steps={thirdSteps}
               textPlacement={MultiStepIndicator.textPlacements.VERTICAL}
               className="monday-storybook-multiStepIndicator_line"
+              dividerComponentClassName="monday-storybook-multiStepIndicator_line_divider"
             />
             <div className="monday-storybook-multiStepIndicator_spacing" />
           </div>
