MultiStepIndicator stories - refactoring, remove typos

--- a/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.mdx
+++ b/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.mdx
@@ -77,7 +77,7 @@ Tabular navigation component that helps users visualize and interact with a mult
 />
 
 <Tip title="Not what you were looking for?">
-  In order to navigate between content withouht a liniar progress, use the{" "}
+  In order to navigate between content without a linear progress, use the{" "}
   <Link href="/?path=/docs/navigation-tabs-tabs--overview" size={Link.sizes.SMALL} withoutSpacing>
     Tabs
   </Link>{" "}
@@ -194,10 +194,10 @@ There are 4 types: Primary, success, danger, dark.
   </Story>
 </Canvas>
 
-### Fullfiled Icons
+### Fulfilled Icons
 
 <Canvas>
-  <Story name="Fullfiled Icons">
+  <Story name="Fulfilled Icons">
     {() => {
       const steps = useMemo(
         () => [
