Remove Toast overrides in Toast stories

--- a/src/components/Toast/__stories__/toast.stories.mdx
+++ b/src/components/Toast/__stories__/toast.stories.mdx
@@ -181,7 +181,7 @@ Use when something was deleted, a problem has occured, etc.
               type={Toast.types.NEGATIVE}
               open
               hideIcon
-              className="monday-storybook-toast_wrapper monday-storybook-toast_negative_rule big"
+              className="monday-storybook-toast_wrapper monday-storybook-toast_negative_rule"
               actions={[{ type: Toast.actionTypes.LINK, text: "Try again", href: "https://monday.com" }]}
             >
               Couldn’t load board items
